modules/cluster/argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.hackathon.io
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /
            pathType: Prefix
